[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/villager_npc_spritesheet/npc01_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game/MerchantNpc.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 120, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 150, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 180, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 210, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 30, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 60, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 90, 192, 30, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 30, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 60, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 90, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 120, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 150, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 180, 240, 30, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 210, 240, 30, 48 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle_back",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "idle_front",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
height = 34.2624

[sub_resource type="CircleShape2D" id=19]
radius = 11.1252

[node name="NPC" type="Node2D"]

[node name="NonPlayerCharacter" type="KinematicBody2D" parent="."]
input_pickable = true
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="NonPlayerCharacter"]
frames = SubResource( 17 )
animation = "idle_back"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NonPlayerCharacter"]
shape = SubResource( 18 )

[node name="Interact" type="Area2D" parent="NonPlayerCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NonPlayerCharacter/Interact"]
shape = SubResource( 19 )

[node name="TalkSound" type="AudioStreamPlayer2D" parent="NonPlayerCharacter"]

[connection signal="body_entered" from="NonPlayerCharacter/Interact" to="NonPlayerCharacter" method="_on_Interact_body_entered"]
[connection signal="body_exited" from="NonPlayerCharacter/Interact" to="NonPlayerCharacter" method="_on_Interact_body_exited"]
